# OCamlCoinFlip

./: coin_flip.opam  dune-workspace
lib/: dune  utils.ml
src/: main.ml
